rar2fs ChangeLog file.

2016-06-26  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #51]

        Use sys/sysmacros.h for major/minor/makedev
        (patch from vapier/master)

2016-04-29  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #48]

        Fixed a compilation issue with GCC6
        (thanks to jyhpsycho for providing the patch).

2016-04-07  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Fixed broken detection of ISO files.

        * Fixed a PRIu64 format error in debug builds.

2016-02-17  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #45]

        Fixed a problem with missing detection of RAR_SMP for
        libunrar5 when not compiling using autotools.

2016-02-10  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Added options --relatime and --relatime-rar.

        * Removed page_size dependency.

2016-01-08  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Released 1.22.0

2015-12-23  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #42]

        Fixed additional issues with offset calculations for both
        legacy and RAR5 volume archives in store mode.

        * Removed the DLL extensions RARGetMainHeaderSize() and 
          RARGetMarkHeaderSize() since they are no longer needed.

        * Updated file cache structure. 

        * Updated copyright headers.

2015-12-20  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #43]

        Replaced use of RARHeaderData with RARHeaderDataEx to allow
        for longer filenames than 260 characters.

2015-12-18  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * [rar2fs #42]

          Fixed a header size calculation error for RAR5 volumes
          when using libunrar v5.30 beta 5 (5.3.6) and later.

2015-11-29  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Fix wrong path being used in utimens 

2015-08-28  Hans Beckerus <hans.beckerus#AT#gmail.com>

        * Released 1.21.0
